bk_ida/gccida/c1/emit_push_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3718:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3749:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3750:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3753:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3758:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3760:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3772:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3811:12: error: expected identifier or '('
 struct op = v18; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3828:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3860:13: error: must use 'enum' tag to refer to type 'mode_class'
&& *( const mode_class *)( ( char *)mode_class_0 + ( ( v26 >> 14) & 0x3FC)) != MODE_INT ) 
            ^
            enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3860:37: error: use of undeclared identifier 'mode_class_0'
&& *( const mode_class *)( ( char *)mode_class_0 + ( ( v26 >> 14) & 0x3FC)) != MODE_INT ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3867:12: error: expected identifier or '('
 struct op = v18; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3879:31: error: invalid suffix 'orce' on integer constant
v32 = operand_sub*(short *)0xforce( op, v30, mode); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3879:7: error: use of undeclared identifier 'operand_sub'
v32 = operand_sub*(short *)0xforce( op, v30, mode); 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3882:18: error: invalid suffix 'xmode' on integer constant
v35 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3919:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v78.rtwint = ( __int64)size->fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:3972:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:4039:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[v60].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/expr.c:4062:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v67 = insn_data_0[v61].genfun( binoptaba, from); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_push_insn/src/obj/expr.o] Error 1
